@@ -48,8 +48,7 @@
   Running
   -------
 
-  Antidote requires at least Java 1.2 to run. It will *not* work with JVM
-  version Blackdown-1.3.0-RC1, but Blackdown-1.3.0-FCS does work. So upgrade.
+  Antidote requires at least Java 1.2 to run. 
 
   Upon successful building of Ant and Antidote (in that order), go to
   ~/build/ant/bin and run "antidote". You will probably have to set the
